--- a/geoserver/Dockerfile
+++ b/geoserver/Dockerfile
@@ -1,2 +1,12 @@
-FROM kartoza/geoserver
+FROM kartoza/geoserver:latest
 
+COPY data_dir/user_projections/epsg.properties /opt/geoserver/data_dir/user_projections/
+COPY data_dir/workspaces /opt/geoserver/data_dir/workspaces
+COPY data_dir/security /opt/geoserver/data_dir/security
+COPY data_dir/styles /opt/geoserver/data_dir/styles
+COPY data_dir/user_projections/epsg.properties /opt/geoserver/data_dir/user_projections/
+COPY data_dir/workspaces /opt/geoserver/data_dir/workspaces
+COPY data_dir/security /opt/geoserver/data_dir/security
+COPY data_dir/styles /opt/geoserver/data_dir/styles
+COPY data_dir/gwc-layers /opt/geoserver/data_dir/gwc-layers
+COPY data_dir/gwc-gs.xml /opt/geoserver/data_dir/gwc-gs.xml
