Duzelt: docker içinde postgis backup dump için TODO eklendi

--- a/postgis/Dockerfile
+++ b/postgis/Dockerfile
@@ -1,2 +1,5 @@
 FROM mdillon/postgis
 
+## TODO: backup dosyası initialziation da getirdb ye back up yapacak şekilde set edilebilir.
+# ADD ./devops/db/dummy_dump.sql /docker-entrypoint-initdb.d 
+
