Ekle: Geoserver dockerfile local image icin duzenlendi ve comment lendi.

--- a/geoserver/Dockerfile
+++ b/geoserver/Dockerfile
@@ -10,3 +10,18 @@ COPY data_dir/security /opt/geoserver/data_dir/security
 COPY data_dir/styles /opt/geoserver/data_dir/styles
 COPY data_dir/gwc-layers /opt/geoserver/data_dir/gwc-layers
 COPY data_dir/gwc-gs.xml /opt/geoserver/data_dir/gwc-gs.xml
+
+
+## M1 chip icin local de olusturulan docker image i kullanmak icin 
+#FROM  kartozageoserverlocal:v1
+
+# COPY data_dir/user_projections/epsg.properties /opt/geoserver/data_dir/user_projections/
+# COPY data_dir/workspaces /opt/geoserver/data_dir/workspaces
+# COPY data_dir/security /opt/geoserver/data_dir/security
+# COPY data_dir/styles /opt/geoserver/data_dir/styles
+# COPY data_dir/user_projections/epsg.properties /opt/geoserver/data_dir/user_projections/
+# COPY data_dir/workspaces /opt/geoserver/data_dir/workspaces
+# COPY data_dir/security /opt/geoserver/data_dir/security
+# COPY data_dir/styles /opt/geoserver/data_dir/styles
+# COPY data_dir/gwc-layers /opt/geoserver/data_dir/gwc-layers
+# COPY data_dir/gwc-gs.xml /opt/geoserver/data_dir/gwc-gs.xml
